# SocketWire

./: .clang-tidy  .dockerignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.docs  Makefile  README.md  mkdocs.yml  requirements-docs.txt
.github/workflows/: ci.yml  comment-lint-results.yaml  docs.yml  lint.yaml  linux.yaml  windows.yaml
Samples/: CMakeLists.txt
Samples/SocketSample/: CMakeLists.txt  ServerTestSocket.cpp  ServerTestSocket.h
Sources/: CMakeLists.txt
Sources/BitStream/: BitStream.cpp  BitStream.h  CMakeLists.txt
Sources/NetSockets/: CMakeLists.txt  NetSocket.cpp  NetSocket.h
cmake/: common.cmake  get_version.cmake  thirdparty.cmake
docs/en/: architecture.md  index.md  multithreading.md  pipeline.md  project-map.md  thread-pool.md
docs/ru/: architecture.md  index.md  multithreading.md  pipeline.md  project-map.md  thread-pool.md
socketwire/: CMakeLists.txt
socketwire/source/: BitStream.cpp  BitStream.h  CMakeLists.txt  NetSocket.cpp  bit_stream.cpp  bit_stream.hpp  connection_manager.cpp  connection_manager.hpp  crypto.cpp  crypto.hpp  emscripten_websocket.cpp  i_socket.cpp  i_socket.hpp  net_socket.cpp  net_socket.hpp  posix_udp_socket.cpp  quantization.hpp  reliable_connection.cpp  reliable_connection.hpp  reliable_protocol.cpp  reliable_protocol.hpp  sharded_connection_manager.cpp  sharded_connection_manager.hpp  socket_address_utils.hpp  socket_constants.cpp  socket_constants.hpp  socket_init.hpp  socket_poller.cpp  socket_poller.hpp  socket_resolver.cpp  socket_resolver.hpp  task_queue.cpp  task_queue.hpp  thread_pool.cpp  thread_pool.hpp  windows_udp_socket.cpp
socketwire/tests/: CMakeLists.txt  socketwire_netem.sh  test_BitStream.cpp  test_Crypto.cpp  test_NetSocket.cpp  test_Performance.cpp  test_PosixUDPSocket.cpp  test_ReliableConnection.cpp  test_ReliableConnection_Integration.cpp  test_ReliableConnection_NetworkProfiles.cpp  test_ReliableConnection_Performance.cpp  test_ReliableProtocol.cpp  test_SocketPoller.cpp  test_SocketResolver.cpp  test_SocketWireParity.cpp  test_ThreadPool.cpp
socketwire/tools/: socketwire_load.cpp
